tests/ui/borrowck/move-error-snippets.stderr
error[E0507]: cannot move out of static item `D`
  --> $DIR/move-error-snippets-ext.rs:5:17
   |
LL | / macro_rules! aaa {
LL | |     ($c:ident) => {{
LL | |         let a = $c;
   | |                 ^^ move occurs because `D` has type `A`, which does not implement the `Copy` trait
LL | |     }}
LL | | }
   | |_- in this expansion of `aaa!` (#2)
   |
  ::: $DIR/move-error-snippets.rs:11:1
   |
LL | / macro_rules! sss {
LL | |     () => {
LL | |         #[test]
LL | |         fn fff() {
LL | |             static D: A = A;
LL | |             aaa!(D);
   | |             ------- in this macro invocation (#2)
LL | |         }
LL | |     };
LL | | }
   | |_- in this expansion of `sss!` (#1)
LL |
LL |   sss!();
   |   ------ in this macro invocation (#1)
   |
help: consider borrowing here
   |
LL |         let a = &$c;
   |                 +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
